<resources>
    <string name="app_name">Trees in the Cloud</string>
    <string name="Login">Login</string>

    <!--  log in variables -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="action_settings">refresh</string>

    <!--variable concerning the main (google maps) screen-->
    <string name="settings_string">Settings</string>
    <string name="map_string">Map</string>
    <string name="login_string">Login</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="text_loading_trees">Loading Trees ...</string>
    <string name="make_group_string">Make Group</string>

    <!--activity names-->
    <string name="title_activity_maps">Trees in the cloud</string>
    <string name="title_activity_login">Please Login</string>
    <string name="title_activity_signup">Please Sign up</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_change_color">Which Color?</string>
    <string name="title_activity_change_language">Choose which Language</string>
    <string name="title_acitivty_add_tree">Add Tree</string>
    <string name="title_activity_tree_profile">Tree Profile</string>
    <string name="title_acitivty_customize_marker">Customize Marker</string>
    <string name="title_activity_get_extra_info">Extra Information</string>
    <string name="title_activity_choose_location">Choose Location</string>
    <string name="title_activity_routes">Routes</string>
    <string name="title_activity_make_group">Make a Group</string>


    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <!--Strings for adding a tree-->
    <string name="string_TitleNewTree">Add a new tree</string>
    <string name="string_textExplainWhy">Why do you want a tree on that specific location? Explain thoroughly</string>
    <string name="string_longitude_text_newtree">Longitude:</string>
    <string name="string_latitude_text_newtree">Latitude:</string>
    <string name="string_group_text_newtree">Tree Specie (optional): </string>
    <string name="string_currentLoacationB">Get current location</string>
    <string name="string_type_text_newtree">Common Name (optional):</string>
    <string name="string_submitNewTreeB">Submit</string>
    <string name="String_explenationError">Explantion is to short</string>
    @string/String_locationError
    <string name="String_locationError">Location is not correct</string>
    <string name="String_specie">Specie: </string>
    <string name="String_status">Status: </string>
    <string name="string_add_tree">Add Tree</string>
    <string name="button_add_tree_choose_location">Choose Location on Map</string>

    <!--Settings menu-->
    <array name="settings">
        <item>Language</item>
        <item>Customize Marker</item>
        <item>Customize Map</item>
    </array>
    <array name="languages">
        <item>English</item>
        <item>Nederlands</item>
    </array>

    <!--Strings concerning the pop up window-->
    <string name="textview_layout_window_specie">Specie: </string>
    <string name="textview_layout_window_name">Name: </string>
    <string name="text_where_are_you">You Are Here!</string>
    <string name="infowindow_button_moreinfo">More Information</string>
    <string name="textview_infowindow_onclicklistener">Click On Window For More Information</string>

    <!--strings concerning the extra information acitvity-->
    <string name="text_extra_info_fragment_one_title">Details</string>
    <string name="text_extra_info_fragment_two_title">Extra</string>
    <string name="text_extra_info_fragment_three_title">Comments</string>
    <string name="textview_extra_info_specie">Specie</string>
    <string name="textview_extra_info_status">Status</string>
    <string name="textview_extra_info_common_name">Common Name</string>
    <string name="textview_extra_info_girth">Girth</string>
    <string name="textview_extra_info_original">Original</string>
    <string name="textview_extra_info_current">Current</string>
    <string name="textview_extra_info_cutting_shape">Cutting Shape</string>
    <string name="text_fetching_tree">Getting Tree Details ...</string>
    <string name="textview_extra_info_fragment_one_title">Details</string>
    <string name="textview_extra_info_address">Location of the Tree</string>
    <string name="text_unable_to_load_address">Unable to load Address of the Tree</string>

    <!--strings concerning routes-->
    <string name="title_menu_options_routes">Routes</string>
    <string name="title_activity_maps_activity__route">MapRoute</string>
    <string name="title_activity_new_route_maps">Map</string>

    <!--Strings concerning adding a tree-->
    <string name="string_popup_newtree">Are you sure you want to plant this tree? A request will be send to Leuven Klimaat Neutraal to plant the tree with you.</string>
    <string name="string_popup_newtree_continue">PROCEED</string>

    <!-- social part-->
    <string name="string_username">Username</string>
    <string name="string_make_a_group">Make a group</string>
    <string name="string_user_does_not_exist">User does not existt</string>
    <string name="string_popup_makegroup">Do you still want to add</string>
    <string name="stirng_no">No</string>
    <string name="string_yes">Yes</string>
    <string name="string_group_name_error">group name already taken</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_confirm">Confirm</string>
    <string name="string_choose_your_group_name">Choose your group name</string>

    <!--Strings concerning tutorialscreen-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Trees in The Cloud</string>
    <string name="slide_1_desc">Together for a greener Leuven</string>

    <string name="slide_2_title">Route</string>
    <string name="slide_2_desc">Make a beautiful walk through Leuven</string>

    <string name="slide_3_title">Login</string>
    <string name="slide_3_desc">Add your own trees and routes when you are logged in!</string>
    <string name="string_popup_newtree_cancel">cancel</string>
    <string name="string_textview_new_route_help">Choose Start Location!</string>
    <string name="string_warning_above_8_waypoints">You can\'t add more then 8 waypoints!</string>
    <string name="textview_help_set_end_location">Set End Location!</string>
    <string name="textview_help_set_points_on_the_way">Set Points on the Way!</string>
    <string name="textview_help_set_start_location">Choose Start Location!</string>
    <string name="textview_help_select_trees">Good? then select your trees that you want to see during the walk (click per marker)</string>
    <string name="textview_help_select_trees_you_want_to_see_at_this_point">Select the trees that you want to see at this point!\n</string>
    <string name="textview_help_cant_go_back">Look out if you press next you can\'t go back to selecting trees!</string>
    <string name="textview_help_previous_button">Select the trees that you want to see at this point!</string>
    <string name="toast_login_fetching_data">Fetching data from server</string>
    <string name="toast_welcome_you_are_logged_in">Welcome you are now logged in</string>
    <string name="alertdialog_login_failed">Login Failed</string>
    <string name="alertdialog_retry">Retry</string>
    <string name="toast_registered_succesfull">successfully registered </string>
    <string name="toast_login_to_like_tree">Please login to like a tree</string>
    <string name="toast_please_log_in_to_comment">Please login to add a comment</string>
    <string name="textview_check_internet_connection">Check your internet connection!</string>
    <string name="textview_help_select_location_new_tree">Click on the marker (and window) to accept this location</string>
    <string name="textview_help_drag_marker_new_tree">Hold and drag the marker to set a Location</string>
    <string name="toast_save_new_tree">Sending data to database succeeded</string>
    <string name="alertdialog_login_to_unlock_feature">please login to unlock this feature!</string>
    <string name="toast_max_zoom_reached">When you zoom in more the heatmap isn\'t visible!</string>
    <string name="textview_new_route_draw_route">Draw Route</string>
    <string name="textview_add_route_create_route">Create Route</string>
    <string name="textview_new_route_select_trees">Select Trees</string>
    <string name="textview_new_route_previous_marker">Previous Marker</string>
    <string name="textview_new_route_next_marker">Next Marker</string>
    <string name="toast_select_marker_representation">Select a visual representation of the trees!</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="button_login">Login</string>
    <string name="check_box_login_remember_password">remember password</string>
    <string name="textview_no_account_yet_create_one">No account yet? Create one</string>
    <string name="button_create_account">Create Account</string>
    <string name="textview_register_already_a_member_login">Already a member? Login</string>
    <string name="hint_register_email">Email</string>
    <string name="toast_min_zoom_reached">If you zoom out more there will be too many trees displayed!</string>
    <string name="textview_welcome_screen_if_you_press_finish_it_will_load_the_trees_from_the_database_online_this_could_take_some_time">If you press finish it will load the trees from the database online, this could take some time!</string>
    <string name="toast_username_taken">Username Already Taken, please choose another one!</string>
    <string name="button_google_extra_info_boom">Extra Information Tree</string>


</resources>

