<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/map"
            android:checked="false"
            android:icon="@drawable/ic_map_black"
            android:title="@string/map_string"/>

        <item
            android:id="@+id/login"
            android:checked="false"
            android:icon="@drawable/ic_inbox_black"
            android:title="@string/login_string" />

        <item
            android:id="@+id/addTree"
            android:checked="false"
            android:icon="@drawable/ic_map_tree"
            android:title="@string/string_add_tree"/>

        <item
            android:id="@+id/routes"
            android:checked="false"
            android:icon="@drawable/ic_routes"
            android:title="@string/title_menu_options_routes"/>

        <item
            android:id="@+id/makeGroup"
            android:checked="false"
            android:icon="@drawable/ic_group"
            android:title="@string/make_group_string" />


        <item
            android:id="@+id/settings"
            android:checked="false"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/settings_string" />

    </group>
</menu>