<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_new_route_draw_route"
            android:id="@+id/btnDraw"
            android:layout_gravity="left"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_add_route_create_route"
            android:id="@+id/btnCreate"
            android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:visibility="invisible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_new_route_select_trees"
            android:id="@+id/btnSelectTrees"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_new_route_previous_marker"
            android:id="@+id/btn_add_route_prev_tree"
            android:layout_alignParentTop="true"
            android:visibility="invisible"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_new_route_next_marker"
            android:id="@+id/btn_add_route_next_tree"
            android:layout_alignParentTop="true"
            android:visibility="invisible"
            android:layout_alignLeft="@+id/btnCreate"
            android:layout_alignStart="@+id/btnCreate" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_new_route_help"
        android:textSize="15dp"
        android:text="Hulp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Routes.NewRouteMapsActivity" />

</LinearLayout>
