<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newtreeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/string_TitleNewTree"
            android:id="@+id/titleNewTree"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_textExplainWhy"
            android:id="@+id/textExplainWhy"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/titleNewTree"
            android:layout_alignLeft="@+id/reasonForNewTree"
            android:layout_alignStart="@+id/reasonForNewTree"
            android:layout_alignRight="@+id/reasonForNewTree"
            android:layout_alignEnd="@+id/reasonForNewTree" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="4"
            android:ems="10"
            android:layout_below="@+id/textExplainWhy"
            android:id="@+id/reasonForNewTree"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="@string/string_currentLoacationB"
            android:id="@+id/currentLocationB"
            android:layout_below="@+id/explanationError_newtree"
            android:layout_alignRight="@+id/explanationError_newtree"
            android:layout_alignEnd="@+id/explanationError_newtree" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_longitude_text_newtree"
            android:id="@+id/longtitude_text_newtree"
            android:layout_above="@+id/latitudeNewTree"
            android:layout_alignLeft="@+id/reasonForNewTree"
            android:layout_alignStart="@+id/reasonForNewTree" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/longtitudeNewTree"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/currentLocationB"
            android:layout_alignRight="@+id/reasonForNewTree"
            android:layout_alignEnd="@+id/reasonForNewTree" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_latitude_text_newtree"
            android:id="@+id/latitude_text_newtree"
            android:layout_alignBottom="@+id/latitudeNewTree"
            android:layout_alignLeft="@+id/longtitude_text_newtree"
            android:layout_alignStart="@+id/longtitude_text_newtree" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/latitudeNewTree"
            android:layout_below="@+id/longtitudeNewTree"
            android:layout_marginTop="20dp"
            android:layout_alignRight="@+id/longtitudeNewTree"
            android:layout_alignEnd="@+id/longtitudeNewTree"
            android:layout_alignLeft="@+id/longtitudeNewTree"
            android:layout_alignStart="@+id/longtitudeNewTree" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/group_text_newtree"
            android:text="@string/string_group_text_newtree"
            android:layout_alignBottom="@+id/groupNewTree"
            android:layout_alignLeft="@+id/latitude_text_newtree"
            android:layout_alignStart="@+id/latitude_text_newtree"
            android:layout_alignRight="@+id/longtitude_text_newtree"
            android:layout_alignEnd="@+id/longtitude_text_newtree" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/groupNewTree"
            android:layout_below="@+id/latitudeNewTree"
            android:layout_marginTop="20dp"
            android:layout_alignRight="@+id/latitudeNewTree"
            android:layout_alignEnd="@+id/latitudeNewTree"
            android:layout_toEndOf="@+id/group_text_newtree"
            android:layout_toRightOf="@id/group_text_newtree"
            android:layout_alignLeft="@+id/latitudeNewTree"
            android:layout_alignStart="@+id/latitudeNewTree" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/type_text_newtree"
            android:text="@string/string_type_text_newtree"
            android:layout_alignBottom="@+id/TypeNewTree"
            android:layout_alignLeft="@+id/group_text_newtree"
            android:layout_alignStart="@+id/group_text_newtree"
            android:layout_toLeftOf="@+id/groupNewTree"
            android:layout_toStartOf="@+id/groupNewTree" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/TypeNewTree"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/group_text_newtree"
            android:layout_alignRight="@+id/groupNewTree"
            android:layout_alignEnd="@+id/groupNewTree" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_submitNewTreeB"
            android:id="@+id/submitNewTreeB"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/TypeNewTree"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/String_explenationError"
            android:id="@+id/explanationError_newtree"
            android:textColor="#f42a2a"
            android:layout_below="@+id/reasonForNewTree"
            android:layout_alignLeft="@+id/reasonForNewTree"
            android:layout_alignStart="@+id/reasonForNewTree"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/String_locationError"
            android:id="@+id/locationError_newtree"
            android:textColor="#f42a2a"
            android:visibility="invisible"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/longtitude_text_newtree"
            android:layout_alignLeft="@+id/longtitude_text_newtree"
            android:layout_alignStart="@+id/longtitude_text_newtree" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="@string/button_add_tree_choose_location"
            android:id="@+id/button_add_tree_choose_location"
            android:layout_below="@+id/explanationError_newtree"
            android:layout_toRightOf="@+id/explanationError_newtree"
            android:layout_toEndOf="@+id/explanationError_newtree"
            android:onClick="getLocationOnMap"/>


    </RelativeLayout>

</ScrollView>
