<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/layout_popup_makegroup"
    android:background="@color/primary_dark">

    <TextView android:id="@+id/popup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/string_popup_makegroup"
        android:gravity="center_horizontal" />

    <TextView android:id="@+id/popup_text_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        style="AppTheme.Dark" />

    <LinearLayout android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button android:id="@+id/CancelB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:onClick="NoPopup"
            android:text="@string/stirng_no"
            android:background="@color/primary_darker" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/YesB"
            android:onClick="YesPopup"
            android:layout_marginBottom="10dp"
            android:text="@string/string_yes"
            android:background="@color/primary_darker" />

    </LinearLayout>
</LinearLayout>

